# Llgl

./: .gitignore  CMakeLists.txt
example/1.helloWorld/: fs.frag
example/2.indexBuffer/: CMakeLists.txt  main.cpp  vs.vert
example/3.Uniforms/: CMakeLists.txt  main.cpp  mat.vert  vs.vert
example/4.Textures/: CMakeLists.txt  fs.frag  main.cpp  vs.vert
example/helloWorld/: CMakeLists.txt  main.cpp
include/llgl/: Attribute.hpp  Attributes.hpp  Color.hpp  IndexBuffer.hpp  IndexBufferBase.hpp  Llgl.hpp  Mat.hpp  Matrix.hpp  Object.hpp  ObjectBase.hpp  Pipeline.hpp  Point2d.hpp  Position2d.hpp  PositionInstruct.hpp  Shader.hpp  Shaders.hpp  ShadersInstructions.hpp  Size.hpp  Texture.hpp  Triangle2d.hpp  Uniform.hpp  UniformBase.hpp  UniformMatrix.hpp  Utils.hpp  VertexBuffor.hpp  Window.hpp
src/: Color.cpp  IndexBufferBase.cpp  Llgl.cpp  Object.cpp  ObjectBase.cpp  Pipeline.cpp  Point2d.cpp  Position2d.cpp  Shader.cpp  Shaders.cpp  Size.cpp  Texture.cpp  Triangle2d.cpp  UniformBase.cpp  Window.cpp
test/: Attributes_test.cpp  CMakeLists.txt  Color_test.cpp  Llgl_test.cpp  Matrix_test.cpp  ObjectBase_test.cpp  Object_test.cpp  Pipeline_test.cpp  Point2d_test.cpp  Position2d_test.cpp  PositionInstruct_test.cpp  ShaderLoader_test.cpp  Size_test.cpp  Triangle2d_test.cpp  Utils_test.cpp  Window_test.cpp
